CS_PROD_20150209_01/Metadata/unpackaged/objects/Prepaid_Clip_Package__c.object
<CustomObject>
    <description>Used to track Accounts who have purchased Prepaid Clip Packages, and then track how many are remaining after a client makes a purchase.</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Master-Detail to the Account object.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Prepaid_Clip_Packages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Clip_Package_Status__c</fullName>
        <label>Clip Package Status</label>
        <picklist>
            <picklistValues>
                <fullName>Future Stock</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Current Stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Depleted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Did_I_sell_this__c</fullName>
        <formula>IF( Sold_By__r.Id = $User.Id, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Did I sell this?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Clip_Package__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Clip Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Clips__c</fullName>
        <label>Number of Clips</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Depleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Package Depleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Per_Item_Amount__c</fullName>
        <label>Per Item Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PrePaid_Package__c</fullName>
        <label>Clip Package</label>
        <picklist>
            <picklistValues>
                <fullName>DVD Clip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Low Res</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital High Res</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DigiCombo Low Res</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DigiCombo High Res</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transcript</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio Clip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <label>Purchase Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Remaining_Package_Clips__c</fullName>
        <formula>Number_of_Clips__c  -  Total_Clip_Packages_Spent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Package Clips</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_by_Percent__c</fullName>
        <formula>IF( Remaining_Package_Clips__c  &gt; 0, Remaining_Package_Clips__c  / Number_of_Clips__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining by Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sold_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Clip_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Clip_Packages_Spent__c</fullName>
        <label>Total Clip Packages Spent</label>
        <summarizedField>Broadcast_Item__c.Total_Clip_Packages_Spent__c</summarizedField>
        <summaryForeignKey>Broadcast_Item__c.Clip_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Package_Amount__c</fullName>
        <label>Total Package Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Clip Package</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Package_Depleted__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Number_of_Clips__c</columns>
        <columns>PrePaid_Package__c</columns>
        <columns>Remaining_Package_Clips__c</columns>
        <columns>Total_Package_Amount__c</columns>
        <columns>Sold_By__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <group>Sys_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Clip_Packages_All</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>PrePaid_Package__c</columns>
        <columns>Sold_By__c</columns>
        <columns>Purchase_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Number_of_Clips__c</columns>
        <columns>Remaining_Package_Clips__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Expiration_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>notContain</operation>
            <value>LISA MURER</value>
        </filters>
        <filters>
            <field>Remaining_Package_Clips__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Clip Packages All</label>
    </listViews>
    <listViews>
        <fullName>My_Clip_Packages</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Sold_By__c</columns>
        <columns>Purchase_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Number_of_Clips__c</columns>
        <columns>Remaining_Package_Clips__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Expiration_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>notContain</operation>
            <value>LISA MURER</value>
        </filters>
        <label>My Clip Packages</label>
        <sharedTo>
            <group>Sys_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X20_Remaining</fullName>
        <columns>NAME</columns>
        <columns>Package_Depleted__c</columns>
        <columns>PrePaid_Package__c</columns>
        <columns>Number_of_Clips__c</columns>
        <columns>Remaining_Package_Clips__c</columns>
        <columns>Account__c</columns>
        <columns>Purchase_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Sold_By__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Package_Depleted__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Remaining_by_Percent__c</field>
            <operation>lessOrEqual</operation>
            <value>20</value>
        </filters>
        <label>20% Remaining</label>
        <sharedTo>
            <group>Sys_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X50_Remaining</fullName>
        <columns>NAME</columns>
        <columns>Package_Depleted__c</columns>
        <columns>PrePaid_Package__c</columns>
        <columns>Number_of_Clips__c</columns>
        <columns>Remaining_Package_Clips__c</columns>
        <columns>Account__c</columns>
        <columns>Purchase_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Sold_By__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Package_Depleted__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Remaining_by_Percent__c</field>
            <operation>lessOrEqual</operation>
            <value>50</value>
        </filters>
        <label>50% Remaining</label>
        <sharedTo>
            <group>Sys_Admin</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Clip Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clip Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>